feature:ログインとヘッダの設定コードを追加してみた
